Fixed alignment, added borders

--- a/Steps.css
+++ b/Steps.css
@@ -1,4 +1,6 @@
-.main-container {
+body {
+	background-image: url("greyzz.png");
+  	background-repeat: repeat;
 }
 
 .input-group {
@@ -24,11 +26,11 @@
 	background-color: #526e26;
 }
 
-#buttonBack {
+#button1to0, #button2to1, #button3to2 {
 	float: left;
 }
 
-#buttonNext {
+#button1to2, #button2to3, #buttonFinish {
 	float: right;
 }
 
@@ -44,4 +46,42 @@
 	padding-top: 30px;
 	padding-bottom: 50px;
 	height: 150%;
+}
+
+.goals-form {
+	text-align: center;
+}
+
+.user-input-section {
+	height: 300px;
+}
+
+.left-bar {
+	background-color: #b9d68a;
+	border-left: 3px solid;
+	border-right: 3px solid;
+	border-color: #526e26;
+	display: inline-block;
+	height: 100vh;
+	width: 150px;
+	float: left;
+}
+
+.right-bar {
+	background-color: #b9d68a;
+	border-left: 3px solid;
+	border-right: 3px solid;
+	border-color: #526e26;
+	display: inline-block;
+	height: 100vh;
+	width: 150px;
+	float: right;
+}
+
+.left-side {
+	padding-left: 0px;
+}
+
+.right-side {
+	padding-right: 0px;
 }
